Refactor codebase to improve immutability, migrate to `record` for data classes, clean up deprecated methods, and upgrade Gradle to 9.4.1